<resources>
    <string name="app_name">AttendX</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="krowd_welcome">Welcome to Krowd</string>
    <string name="description">the location based attendance taker!</string>
    <string name="sign_up">Sign Up</string>
    <string name="about">About</string>
    <string name="i_am_a">I am a ...</string>
    <string name="student">Student</string>
    <string name="instructor_professor">Instructor/Professor</string>
    <string name="create_your_krowd_account">Create your Krowd account</string>
    <string name="submit">Submit</string>
    <string name="course">Course</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="user_name_same_as_your_name">User Name (Same as your first name)</string>
    <string name="login">Login</string>
    <string name="log_in_string">Log In</string>
    <string name="email">Email</string>
    <string name="bio">CS 4540 Android Development
        \n ---------------------------------
    \nCS 3801 Societal and Ethical issues in Computing
        \n ---------------------------------
    \nCS 3035 Programming Language Paradigms
        \n ---------------------------------
    \nCS 5035 TOPICS IN FUNCTIONAL PROGRAMMING
        \n ---------------------------------
    \nCS 4551 MULTIMEDIA SOFTWARE SYSTEMS
        \n ---------------------------------
    </string>
    <string name="Krowd">Krowd</string>
    <string name="SignUp">Sign Up</string>
    <string name="Add">Add</string>
    <string name="description_course">Class Description :</string>
    <string name="BackToHome">Back To Home</string>
    <string name="backTo">To Home</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="startAttendance">Start Attendance</string>
    <string name="attendance">Take Attendance</string>
    <string name="back">Back To Home</string>
    <string name="seeResult">See Attendance Result</string>
    <string name="share">Share Result</string>
    <string name="showresult">Show Attendance</string>
    <string name="drop">Drop This Course</string>
    <string name="aboutPage">AttendX is your dedicated attendance companion, designed with
        educators in mind. Empowering teachers to efficiently record daily attendance, AttendX
        leverages location-based technology. If students are not within specified proximity
        ranges, they won\'t be eligible for attendance. Experience a smarter, more accurate way
        to manage classroom presence with AttendX.
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="common_signin_button_text">SignIn</string>
    <string name="enter_first_name">Enter first name...</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter last name...</string>
    <string name="enter_email_address">Enter email address...</string>
    <string name="enter_password">Enter password...</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="we_just_need_your_registered_email_address_to_send_you_password_reset">We just need your registered email address to send you password reset</string>
    <string name="send">Send</string>
    <string name="enroll">Enroll</string>
    <string name="about_section">Developed by innovative minds at IYC, our college attendance app,
        AttendX, is revolutionizing attendance management with the dedicated support of our esteemed faculty. Together, we\'ve meticulously engineered a seamless solution for effortless tracking and participation. Join us on this pioneering journey!</string>
    <string name="don_t_miss_out_mark_your_presence">Don\'t Miss Out, Mark Your Presence!</string>
    <string name="skip">SKIP</string>
    <string name="log_out">Log Out</string>
    <string name="ismail_yusuf_college">Ismail Yusuf College</string>
    <string name="admin_login">Login</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="remember_me">Remember me</string>
    <string name="admin_password">Password</string>
    <string name="admin_email_address">Email Address</string>
    <string name="collegename">ISMAIL YUSUF COLLEGE</string>
</resources>