<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ResetPassword"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="76dp"
            android:layout_height="56dp"
            android:layout_marginTop="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:srcCompat="@drawable/lock" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="11dp"
            android:text="@string/forgot_password"
            android:textColor="#0A0A0A"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="334dp"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="31dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/we_just_need_your_registered_email_address_to_send_you_password_reset"
            android:textColor="#464545"
            app:layout_constraintBottom_toTopOf="@+id/enteredEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />


        <EditText
            android:id="@+id/enteredEmail"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="65dp"
            android:drawableLeft="@drawable/profile_1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:textColorHint="@color/colorBackground"
            android:textColor="@color/my_primary"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="266dp"
            android:layout_height="48dp"
            android:layout_marginTop="124dp"
            android:background="@drawable/btn_rounded"

            android:text="@string/send"

            android:textColor="#FCF9F9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enteredEmail" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav6"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:background="#e2e2e2"
            app:itemIconTint="@drawable/colorchange"
            app:itemTextColor="@drawable/colorchange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit"
            app:layout_constraintVertical_bias="0.992"
            app:menu="@menu/enroll" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>