<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1"
        tools:context="">


        <TextView
            android:id="@+id/textView"
            android:layout_width="114dp"
            android:layout_height="56dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/common_signin_button_text"
            android:textColor="#045FE7"
            android:textSize="36sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@id/simpleEditText"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/simpleEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

        <EditText
            android:id="@+id/simpleEditText"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rect_textedit"
            android:drawableStart="@drawable/email"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/email"
            android:textColorHint="@color/colorBackground"
            android:textColor="@color/my_primary"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/simpleEditText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.982" />

        <EditText
            android:id="@+id/simpleEditText3"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rect_textedit"
            android:textColorHint="@color/colorBackground"
            android:textColor="@color/my_primary"
            android:drawableLeft="@drawable/password"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/simpleEditText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleEditText"
            app:layout_constraintVertical_bias="0.982"  />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/button"
            android:layout_width="266dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="200dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/login"
            android:textColor="#FAF5F5"
            app:layout_constraintBottom_toTopOf="@+id/nav4"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleEditText3"
            app:layout_constraintVertical_bias="0.933"
            tools:text="@string/login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="Forgot Password?"
            android:textColor="#2196F3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.812"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loadingpanel1"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleEditText3">

            <ProgressBar
                style="@style/GenericProgressIndicator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#e2e2e2"
            app:itemIconTint="@drawable/colorchange"
            app:itemTextColor="@drawable/colorchange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPass"
            app:layout_constraintVertical_bias="1.0"
            app:menu="@menu/enroll" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>