<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ManageClasses">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#E5D9F4"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    >

                    <TextView
                        android:id="@+id/college"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="#333232"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:text="ISMAIL YUSUF COLLEGE"
                        />



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview3"
                android:layout_marginTop="120dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="#F4DBDB"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Create Class:"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#D11616"
                        />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="319dp"
                        android:layout_height="51dp"



                        android:hint="Class Name"
                        android:textColorHint="@color/colorTextView"
                        android:textColor="#1C1C1C"
                        android:inputType="text"
                        />

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="319dp"
                        android:layout_height="82dp"
                        android:background="@drawable/border_textview"
                        android:padding="10dp"

                        android:hint="@string/description_course"
                        android:textColorHint="@color/my_primary"
                        android:textColor="@color/my_primary"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:scrollHorizontally="false"
                        android:layout_margin="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button5"
                        android:layout_width="266dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="150dp"
                        android:background="@drawable/add_class"
                        android:text="Add Class"
                        android:layout_gravity="center"
                        android:textColor="#F4F5F7"
                         />



                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>










        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/courseInfor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/courseInfo"
            android:layout_width="393dp"
            android:layout_height="242dp"
            android:background="#FFC0CB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/des_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/courseID"
                app:layout_constraintStart_toStartOf="@+id/courseID"
                app:layout_constraintTop_toBottomOf="@+id/textView9">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_desc"
                    android:layout_margin="3dp"
                    android:padding="3dp"/>




            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/courseID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/des_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/attendance"
            android:layout_width="266dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/startAttendance"
            android:textColor="#FFEB3B"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studentList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studentList"
            android:layout_width="243dp"
            android:layout_height="203dp"
            android:layout_marginTop="28dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInfo"
            app:layout_constraintVertical_bias="0.293" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/studentList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInfo"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seeResult"
            android:layout_width="266dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/seeResult"
            android:textColor="#FDFCFC"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/studentList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInfo"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#e2e2e2"
            app:itemIconTint="@drawable/colorchange"
            app:itemTextColor="@drawable/colorchange"
            app:menu="@menu/manageclassnav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>